apps/posts/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog-service
  namespace: zt-posts
  labels:
    app: blog-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blog-service
  template:
    metadata:
      labels:
        app: blog-service
    spec:
      serviceAccountName: blog-service
      containers:
        - name: blog-service
          image: devesh11411/blog-posts:v1.0.0
          ports:
            - containerPort: 4002
          livenessProbe:
            httpGet:
              path: /healthz
              port: 4002
            initialDelaySeconds: 10
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /readyz
              port: 4002
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 300m
              memory: 256Mi
