apps/posts/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blog-service
  namespace: zt-posts
  labels:
    app: blog-service
spec:
  selector:
    app: blog-service
  ports:
    - name: http
      port: 4002
      targetPort: 4002
